add jvm args for ktlint