@@ -84,6 +84,7 @@ task("ktlint", type: JavaExec, group: "verification") {
         "--reporter=checkstyle,output=${outputFile}",
         "**/*.kt",
     ]
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
 }
 
 task clean(type: Delete) {
